@startuml

hide empty members
allowmixing

title "Вопросы"

package "Вопросы" as questions {

    class QuestionService

    class CheckResult {
        + points: Float
        + message: String
    }

    abstract class Question<Selection> {
        + id: Int
        + title: String
        + description: String
        + difficulty: Difficulty
        + resultDescription: String
        + discipline: <b>Discipline</b>
        + check(Selection): CheckResult
        + getCost(): Int
    }

    interface Selection
    Question .> Selection
    Question --> Difficulty
    Question *-d- CheckResult

    enum Difficulty {
        LOW
        MEDIUM
        HIGH
    }

    QuestionService .> Question

    interface QuestionRepository
    QuestionService ....> QuestionRepository

    Question <.. QuestionRepository

'    class QuestionRepositoryImpl implements QuestionRepository
'    class QuestionEntity

'    QuestionRepositoryImpl .> QuestionEntity

}

package "Закрытые вопросы" as closed_questions {

    class ClosedQuestion<ClosedQuestionSelection> {
        - options: List<ClosedQuestionOption>
    }

    class ClosedQuestionSelection {
        + selectedOptions: Set<Int>
    }

    class ClosedQuestionOption {
        + id: Int
        + title: String
        + valid: Boolean
        + imageMediaId: Int
    }

    ClosedQuestion *-- ClosedQuestionOption
    ClosedQuestion ..> ClosedQuestionSelection
}

package "Закрытые упорядоченные вопросы" as ordered_questions {

    class OrderedClosedQuestion<OrderedClosedQuestionSelection> {
        - options: List<OrderedClosedQuestionOption>
        - validOrderedOptions: List<Int>
    }

    class OrderedClosedQuestionSelection {
        + selectedOptions: List<Int>
    }

    class OrderedClosedQuestionOption {
        + id: Int
        + title: String
    }

    OrderedClosedQuestion ..> OrderedClosedQuestionSelection
    OrderedClosedQuestion *-- OrderedClosedQuestionOption
}

package "Открытые вопросы" as open_questions {

    class OpenQuestion<OpenQuestionSelection> {
        - validAnswer: String
        - maxDeviation: Float
    }

    class OpenQuestionSelection {
        + answer: String
    }

    OpenQuestion ..> OpenQuestionSelection
}

Question <|-- ClosedQuestion
Question <|-- OrderedClosedQuestion
Question <|-- OpenQuestion


@enduml